...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/noteHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/note_header"
                android:textSize="@dimen/header_text_size"
                android:textStyle="bold"
                android:gravity="center"
                android:labelFor="@+id/noteEditText"/>
            <EditText
                android:id="@+id/noteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:layout_marginLeft="15dp"
...
