<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/courseCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="5dp"
    card_view:cardUseCompatPadding="true"
    card_view:cardBackgroundColor="@color/teal_200">

    <TextView
        android:id="@+id/noteMessageTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="@dimen/medium_text_size"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:padding="5dp"
        android:gravity="center"/>




</androidx.cardview.widget.CardView>